--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,7 @@
 <html lang="es">
   <head>
     <meta charset="utf-8" />
+    <script src="https://use.fontawesome.com/47175cb175.js"></script>
     <link rel="icon" href='%PUBLIC_URL%/static/favicon.ico' />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
